fix(common-ui): attachments diff overflow fix

--- a/plugins-structure/apps/politeia/src/components/Proposal/ModalProposalDiff.module.css
+++ b/plugins-structure/apps/politeia/src/components/Proposal/ModalProposalDiff.module.css
@@ -29,6 +29,10 @@
   overflow-x: auto;
 }
 
+.filesDiffWrapper > * {
+  overflow-x: visible;
+}
+
 .added {
   border: 2px solid var(--color-green);
 }
